Bug #1231 - Chrome, Safari: On filter lists the third filter dropdown text gets cut off

--- a/wp-content/themes/openlab/style.css
+++ b/wp-content/themes/openlab/style.css
@@ -7721,7 +7721,8 @@ body .align-left {
 }
 .custom-select span.customSelect .customSelectInner,
 .hidden-custom-select span.customSelect .customSelectInner {
-  max-width: 192px;
+  max-width: 90%;
+  min-width: 90%;
   overflow: hidden;
   white-space: nowrap;
 }
